@@ -1,11 +1,0 @@
-===========================================================================
-$NetBSD: MESSAGE,v 1.1.1.1 2004/06/20 19:36:55 xtraeme Exp $
-
-${PKGBASE} is now installed into ${HTTPD_ROOT}, 
-you'll have to copy the file distconfig.inc to config.inc found in the
-includes directory and adapt it to your subversion server.
-
-More information can be found in 
-${HTTPD_ROOT}/websvn/install.txt.
-
-===========================================================================
