@@ -1,4 +1,5 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2004/06/20 19:36:56 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/06/21 01:34:16 xtraeme Exp $
+share/examples/websvn/distconfig.inc
 ${HTTPD_ROOT}/websvn/cache/tmp
 ${HTTPD_ROOT}/websvn/changes.txt
 ${HTTPD_ROOT}/websvn/diff.php
@@ -6,7 +7,7 @@ ${HTTPD_ROOT}/websvn/filedetails.php
 ${HTTPD_ROOT}/websvn/form.php
 ${HTTPD_ROOT}/websvn/include/command.inc
 ${HTTPD_ROOT}/websvn/include/configclass.inc
-${HTTPD_ROOT}/websvn/include/distconfig.inc
+${HTTPD_ROOT}/websvn/include/feedcreator.class.php
 ${HTTPD_ROOT}/websvn/include/setup.inc
 ${HTTPD_ROOT}/websvn/include/svnlook.inc
 ${HTTPD_ROOT}/websvn/include/template.inc
@@ -15,10 +16,13 @@ ${HTTPD_ROOT}/websvn/include/version.inc
 ${HTTPD_ROOT}/websvn/index.php
 ${HTTPD_ROOT}/websvn/install.txt
 ${HTTPD_ROOT}/websvn/languages/english.inc
+${HTTPD_ROOT}/websvn/languages/french.inc
 ${HTTPD_ROOT}/websvn/languages/german.inc
+${HTTPD_ROOT}/websvn/languages/portuguese.inc
 ${HTTPD_ROOT}/websvn/licence.txt
 ${HTTPD_ROOT}/websvn/listing.php
 ${HTTPD_ROOT}/websvn/log.php
+${HTTPD_ROOT}/websvn/rss.php
 ${HTTPD_ROOT}/websvn/templates.txt
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/diff.tmpl
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/directory.tmpl
@@ -36,6 +40,7 @@ ${HTTPD_ROOT}/websvn/templates/BlueGrey/png.js
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/repo.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/styles.css
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/subversion.png
+${HTTPD_ROOT}/websvn/templates/BlueGrey/xml.gif
 ${HTTPD_ROOT}/websvn/templates/Standard/diff.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/directory.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/file.tmpl
@@ -44,12 +49,13 @@ ${HTTPD_ROOT}/websvn/templates/Standard/header.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/index.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/log.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/styles.css
+${HTTPD_ROOT}/websvn/templates/Standard/xml.gif
 ${HTTPD_ROOT}/websvn/wsvn.php
 @dirrm ${HTTPD_ROOT}/websvn/templates/Standard
 @dirrm ${HTTPD_ROOT}/websvn/templates/BlueGrey
 @dirrm ${HTTPD_ROOT}/websvn/templates
+@exec ${MKDIR} %D/${HTTPD_ROOT}/websvn/temp
 @dirrm ${HTTPD_ROOT}/websvn/temp
 @dirrm ${HTTPD_ROOT}/websvn/languages
-@dirrm ${HTTPD_ROOT}/websvn/include
 @dirrm ${HTTPD_ROOT}/websvn/cache
-@dirrm ${HTTPD_ROOT}/websvn
+@dirrm share/examples/websvn
